Fix color contrast issue for Not in Library button

--- a/static/css/components/buttonCta.less
+++ b/static/css/components/buttonCta.less
@@ -19,7 +19,7 @@ a.cta-btn {
   text-align: center;
   padding: 7px;
   white-space: nowrap;
-  background-color: @mid-grey;
+  background-color: @grey;
   line-height: 1.5em;
   text-decoration: none;
 
